# nix-openFrameworks-template

./: .envrc  .gitignore  .gitmodules  BUILD.gn  BUILDCONFIG.gn  README.md  default.nix  flake.nix  libopenframeworks.nix  shell.nix
nix/overlays/: tess2-overlay.nix
src/: main.cpp  ofApp.cpp  ofApp.h
toolchain/: BUILD.gn
